--- a/style.css
+++ b/style.css
@@ -1,5 +1,20 @@
 body{ background-color: deeppink;
-}
-body{border-style: double;
+border-style: double; 
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 h1{color: aliceblue;}
+
+footer {
+    background-color: black;
+    color: white;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 2rem;
+    }
+    
+    footer p {
+    text-align:center;
+    font-size: 0.6rem;
+    margin-top: 0.5rem;
+    }
